# OAuth/routes/OAuthFacebookRoute.js
@@ -4,9 +4,6 @@ const FacebookStrategy = require('../controller/outhFacebook');
 
 const OAuthFacebookRoutes = (app) => {
 
-  app.get('/auth/facebook',
-  passport.authenticate('facebook', { authType: 'reauthenticate', scope: ['user_friends', 'manage_pages'] }));
-
   app.get("/auth/facebook", passport.authenticate("facebook"));
 
   app.get(
